# airflow-spark-ut

./: .gitignore  README.md  pyproject.toml
.github/: copilot-instructions.md
airflow_dags.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
config/: README.md  airflow.cfg.example  airflow_test.cfg  test_connections.json  test_variables.json
dags/: README.md  daily_csv_to_iceberg_dag.py  iceberg_dag.py  spark_iceberg_dag.py
dags/daily_csv_to_iceberg/: requirements.txt
dags/daily_employees/: dag.py
dags/iceberg_create_products_dag/: requirements.txt
dags/iceberg_products/: dag.py
dags/spark_users/: dag.py  requirements.txt
dags/utils/: __init__.py  storage.py  storage_config.py
tests/: conftest.py  test_dag_execution.py  test_dags.py  test_spark_jobs.py  test_storage.py
tests/resources/: README.md  sample_employees.csv  sample_products.csv  sample_users.csv
